[metadata]
name = dcc
author_email = sean.leavey@ligo.org
license = GPL
license_file = LICENSE
url = https://docs.ligo.org/sean-leavey/dcc/
description = Tools for interactive and programmatic access to the LIGO DCC.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://git.ligo.org/sean-leavey/dcc/-/issues
    Source Code = https://git.ligo.org/sean-leavey/dcc/
    Documentation = https://docs.ligo.org/sean-leavey/dcc/

[options]
packages = find:
python_requires = >=3.8
install_requires =
    beautifulsoup4
    pytz
    html2text
    ciecplib
    click
    toml

[options.entry_points]
console_scripts =
    dcc = dcc.__main__:dcc

[options.extras_require]
dev =
    # Docs.
    sphinx
    sphinxcontrib-programoutput
    insipid-sphinx-theme
    numpydoc
    # Formatting.
    black
    pre-commit
    pylint
    flake8
    flake8-bugbear
    doc8

[flake8]
# Ignored rules.
ignore =
    # Errors.
    E203  # whitespace before ':'
    E266  # too many leading '#' for block comment
    E501  # line too long (handled by black instead).
    E731  # do not assign a lambda expression, use a def
    # Warnings.
    W503  # line break before binary operator

# Excluded directories.
exclude =
    .git
    __pycache__
    docs
    build
    dist
