[metadata]
name = dcc
author = Sean Leavey
author_email = sean.leavey@ligo.org
description = Tools for interactive and programmatic access to the LIGO DCC.
license = GPL-3.0-or-later
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://docs.ligo.org/sean-leavey/dcc/
download_url = https://docs.ligo.org/sean-leavey/dcc/installation.html
project_urls =
    Bug Tracker = https://git.ligo.org/sean-leavey/dcc/-/issues
    Source Code = https://git.ligo.org/sean-leavey/dcc/
    Documentation = https://docs.ligo.org/sean-leavey/dcc/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
packages =
    dcc
package_dir =
    = src
python_requires = >=3.8
install_requires =
    beautifulsoup4 >= 4.0.0
    ciecplib >= 0.4.4
    click >= 7.0.0
    html2text >= 2018.1.9
    pytz >= 2018.3
    tomli >= 2.0.0
    tomli-w >= 1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dcc = dcc.__main__:dcc

[options.extras_require]
dev =
    # Docs.
    sphinx
    sphinxcontrib-programoutput
    insipid-sphinx-theme
    numpydoc
    # Tools.
    black
    pre-commit
    pylint
    flake8
    flake8-bugbear
    doc8
    # Testing.
    pytest
    requests-mock

[flake8]
# Ignored rules.
ignore =
    # Errors.
    E203  # whitespace before ':'
    E266  # too many leading '#' for block comment
    E501  # line too long (handled by black instead).
    E731  # do not assign a lambda expression, use a def
    # Warnings.
    W503  # line break before binary operator

# Excluded directories.
exclude =
    .git
    __pycache__
    docs
    build
    dist
